add filter fields in fetch

--- a/src/templates/previewCard.hbs
+++ b/src/templates/previewCard.hbs
@@ -5,5 +5,5 @@
 </div>
 <p class="countryCapital"><b>Capital:</b> {{capital}}</p>
 <p class="countryPopulation"><b>Population:</b> {{population}}</p>
-<p class="countryLanguages"><b>Languages:</b> {{languages.key}}</p>
+<p class="countryLanguages"><b>Languages:</b> {{languages.value}}</p>
 {{/each}}
